<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewCurrentLocation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdgeLength="200dp"
    android:fillViewport="true"
    android:requiresFadingEdge="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/biryani"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:text="test"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityName" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="102dp"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="27dp"
            android:fontFamily="@font/copse"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintTop_toBottomOf="@+id/temperature" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linechart"
            android:layout_width="361dp"
            android:layout_height="187dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            app:layout_constraintVertical_bias="0.123" />

        <TextView
            android:id="@+id/coordinatesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:text="@string/coordinates"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="88dp"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/feelsLikeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/feels_like"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/coordinatesLabel"
            app:layout_constraintTop_toBottomOf="@+id/coordinatesLabel" />

        <TextView
            android:id="@+id/feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/coordinates"
            app:layout_constraintTop_toBottomOf="@+id/coordinates" />

        <TextView
            android:id="@+id/sunriseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sunrise"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/feelsLikeLabel"
            app:layout_constraintTop_toBottomOf="@+id/feelsLikeLabel" />

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/feels_like"
            app:layout_constraintTop_toBottomOf="@+id/feels_like" />

        <TextView
            android:id="@+id/sunsetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sunset"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/sunriseLabel"
            app:layout_constraintTop_toBottomOf="@+id/sunriseLabel" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/sunrise"
            app:layout_constraintTop_toBottomOf="@+id/sunrise" />

        <TextView
            android:id="@+id/pressureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/pressure"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/sunsetLabel"
            app:layout_constraintTop_toBottomOf="@+id/sunsetLabel" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/sunset"
            app:layout_constraintTop_toBottomOf="@+id/sunset" />

        <TextView
            android:id="@+id/humidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/humidity"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/pressureLabel"
            app:layout_constraintTop_toBottomOf="@+id/pressureLabel" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/pressure"
            app:layout_constraintTop_toBottomOf="@+id/pressure" />

        <TextView
            android:id="@+id/windSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/wind_speed"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/humidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/humidityLabel" />

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/humidity"
            app:layout_constraintTop_toBottomOf="@+id/humidity" />

        <TextView
            android:id="@+id/cloudsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/clouds"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/windSpeedLabel"
            app:layout_constraintTop_toBottomOf="@+id/windSpeedLabel" />

        <TextView
            android:id="@+id/clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="347dp"
            android:layout_height="1dp"
            android:layout_marginTop="620dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="1048dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>