<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="379dp"
        android:layout_height="208dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/SlateBlue"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/cardFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/feels_like"
                android:textColor="@color/White"
                app:layout_constraintEnd_toStartOf="@+id/cardFeelsLikeValues"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardDescription" />

            <TextView
                android:id="@+id/cardFeelsLikeValues"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="88dp"
                android:gravity="center"
                android:textColor="@color/White"
                app:layout_constraintEnd_toStartOf="@+id/cardIcon"
                app:layout_constraintTop_toBottomOf="@+id/cardDescription" />

            <TextView
                android:id="@+id/cardClouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/clouds"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cardCloudsValue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardFeelsLike"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/cardCloudsValue"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:layout_marginEnd="88dp"
                android:gravity="center"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cardIcon"
                app:layout_constraintTop_toBottomOf="@+id/cardFeelsLikeValues"
                app:layout_constraintVertical_bias="0.518" />

            <TextView
                android:id="@+id/cardCityName"
                android:layout_width="161dp"
                android:layout_height="44dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/White"
                android:textSize="30dp"
                app:layout_constraintEnd_toStartOf="@+id/cardTemperature"
                app:layout_constraintHorizontal_bias="0.592"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardDescription"
                android:layout_width="200dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Description"
                android:textColor="@color/White"
                android:textSize="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardCityName" />

            <TextView
                android:id="@+id/cardTemperature"
                android:layout_width="86dp"
                android:layout_height="52dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="76dp"
                android:gravity="center"
                android:textColor="@color/White"
                android:textSize="40dp"
                app:layout_constraintBottom_toTopOf="@+id/removeButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.72"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75" />

            <ImageView
                android:id="@+id/cardIcon"
                android:layout_width="89dp"
                android:layout_height="86dp"
                android:layout_marginBottom="56dp"
                android:textColor="@color/White"
                app:layout_constraintBottom_toTopOf="@+id/removeButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/removeButton"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>